<resources>
    <string name="app_name">Notizbuch</string>
    <string name="create_note">Create note</string>
    <string name="delete_list">Delete list</string>
    <string name="title_min_length">"The note-title has to be at least three characters long."</string>
    <string name="ask_delete_list">The complete list will be deleted.</string>
    <string name="ask_continue">Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_all_deleted">All notes have been deleted.</string>
    <string name="confirm_single_deleted">"Note has become deleted."</string>
    <string name="confirm_cancel">Operation cancelled.</string>
    <string name="ask_delete_note">The note will be deleted.</string>
    <string name="hint_note_title">The title of the note.</string>
    <string name="hint_note_text">The text of the note.</string>
    <string name="label_create_note">Create new Note</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="job">Job</string>
    <string name="family">Family</string>
    <string name="hobby">Hobby</string>
    <string name="other">Other</string>
    <string name="update">Update</string>
    <string name="updated_message">Note has become updated.</string>
    <string-array name="categories">
        <item>@string/job</item>
        <item>@string/family</item>
        <item>@string/hobby</item>
        <item>@string/other</item>
    </string-array>
</resources>